# Humanoid-2024

./: .gitattributes  .gitignore  Dockerfile  README.md  compose.yml  requirements.txt
.github/workflows/: pull_request.yml
Firmware/.metadata/: .log4j2.xml  version.ini
Firmware/.metadata/.plugins/org.eclipse.cdt.core/: devkit_servo_test_CM4.language.settings.xml  devkit_servo_test_CM7.language.settings.xml
Firmware/.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
Firmware/.metadata/.plugins/org.eclipse.core.resources/.projects/devkit_servo_test/: .location  .markers
Firmware/.metadata/.plugins/org.eclipse.core.resources/.projects/devkit_servo_test_CM4/: .location
Firmware/.metadata/.plugins/org.eclipse.core.resources/.projects/devkit_servo_test_CM7/: .location  .markers
Firmware/.metadata/.plugins/org.eclipse.core.resources/.root/: 2.tree
Firmware/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
Firmware/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
Firmware/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
Firmware/.metadata/.plugins/org.eclipse.equinox.p2.ui/: dialog_settings.xml
Firmware/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
Firmware/.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
Firmware/devkit_servo_test/: .mxproject  .project  devkit_servo_test.ioc
Firmware/devkit_servo_test/CM4/: .cproject  .project
Firmware/devkit_servo_test/CM4/Core/Src/: main.c  stm32h7xx_hal_msp.c
Firmware/devkit_servo_test/CM7/: .cproject  .project
Firmware/devkit_servo_test/CM7/Core/Inc/: FreeRTOSConfig.h  stm32h7xx_hal_conf.h
Firmware/devkit_servo_test/CM7/Core/Src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c
Firmware/devkit_servo_test/CM7/Debug/: devkit_servo_test_CM7.list  devkit_servo_test_CM7.map  makefile  objects.list  sources.mk
Firmware/devkit_servo_test/CM7/Debug/Common/Src/: subdir.mk  system_stm32h7xx_dualcore_boot_cm4_cm7.d
Firmware/devkit_servo_test/CM7/Debug/Core/Src/: custom_memory_manager.d  freertos.d  main.d  microros_allocators.d  stm32h7xx_hal_msp.d  stm32h7xx_hal_timebase_tim.d  stm32h7xx_it.d  subdir.mk  syscalls.d  sysmem.d
Firmware/devkit_servo_test/CM7/Debug/Core/Startup/: subdir.mk
Firmware/devkit_servo_test/CM7/Debug/Drivers/STM32H7xx_HAL_Driver/: stm32h7xx_hal.d  stm32h7xx_hal_cortex.d  stm32h7xx_hal_dma.d  stm32h7xx_hal_dma_ex.d  stm32h7xx_hal_eth.d  stm32h7xx_hal_eth_ex.d  stm32h7xx_hal_exti.d  stm32h7xx_hal_flash.d  (+18 more)
Firmware/devkit_servo_test/CM7/LWIP/App/: lwip.c
Firmware/l433_xl320_test/: .cproject  .mxproject  .project  STM32L433RCTXP_FLASH.ld  l433_xl320_test.ioc
Firmware/l433_xl320_test/Core/Inc/: main.h  stm32l4xx_hal_conf.h
Firmware/l433_xl320_test/Core/Src/: XL_320.cpp  XL_320.hpp  gpio.c  main.c  main.cpp  stm32l4xx_hal_msp.c  tim.c  usart.c
Firmware/l433_xl320_test/Debug/: makefile  objects.list  sources.mk
Firmware/l433_xl320_test/Debug/Core/Src/: XL_320.d  gpio.d  main.cyclo  main.d  main.su  stm32l4xx_hal_msp.d  stm32l4xx_it.d  subdir.mk  system_stm32l4xx.d  tim.cyclo  tim.d  tim.su  usart.cyclo  usart.d  usart.su
Firmware/l433_xl320_test/Debug/Core/Startup/: startup_stm32l433rctxp.d  subdir.mk
Firmware/teensy40_xl320_test/: platformio.ini
Firmware/teensy40_xl320_test/include/: Servo_XL320.h  control_table_xl320.h
Firmware/teensy40_xl320_test/src/: Servo_XL320.cpp  main.cpp
Firmware/teensy40_xl320_test_mn297/src/: XL_320.cpp  XL_320.hpp  main.cpp
Firmware/teensy41_microros_test/: platformio.ini
Firmware/teensy41_microros_test/src/: main.cpp
Firmware/tut_eth_ros2/: tut_eth_ros2.ioc
catkin_ws/src/bringup/: CMakeLists.txt  package.xml
catkin_ws/src/bringup/launch/: bringup.launch  no_hardware.launch  real.launch  sim.launch
catkin_ws/src/controls/: CMakeLists.txt  package.xml
catkin_ws/src/controls/launch/: fine_tune.launch  policy_control.launch
catkin_ws/src/controls/model_weights/: PPO_Standing_0_0_episode_1.pth  PPO_Standing_0_0_episode_21.pth
catkin_ws/src/controls/src/: policy_control.py  ppo_inference_model.py  reward_generator.py  state_generator.py
catkin_ws/src/hardware/: CMakeLists.txt  package.xml
catkin_ws/src/hardware/launch/: imu.launch
catkin_ws/src/humanoid_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/humanoid_msgs/msg/: PressureSensor.msg  PressureSensors.msg  ServoCommand.msg  ServoFeedback.msg  ServoSetpoints.msg  ServoState.msg  UnityState.msg
catkin_ws/src/sim/: CMakeLists.txt  package.xml
catkin_ws/src/sim/launch/: sim.launch  visualization.launch
catkin_ws/src/unity/: CMakeLists.txt  package.xml
catkin_ws/src/unity/launch/: endpoint.launch  sim.launch  visualization.launch
catkin_ws/src/unity/src/: unity_bridge.py
catkin_ws/src/vision/: CMakeLists.txt  package.xml
jetson/: Dockerfile  compose.yml  requirements.txt
ros2_ws/src/actuation/: CMakeLists.txt  package.xml
ros2_ws/src/bringup/: setup.cfg  setup.py
ros2_ws/src/bringup/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/bringup/launch/: hardware_interface.launch.py  real_launch.py  sim_launch.py
ros2_ws/src/bringup/log/: latest_build
ros2_ws/src/controls/: package.xml  setup.py
ros2_ws/src/hardware_interface/: CMakeLists.txt  package.xml
ros2_ws/src/hardware_interface/src/: hardware_interface.cpp
ros2_ws/src/humanoid_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/humanoid_msgs/msg/: MotorStates.msg
ros2_ws/src/sensors/: package.xml
ros2_ws/src/sim/: package.xml  setup.cfg  setup.py
ros2_ws/src/sim/launch/: endpoint.py
ros2_ws/src/sim/sim/: default_server_endpoint.py  server.py
ros2_ws/src/state_estimation/: package.xml  setup.py
ros2_ws/src/vision/: package.xml  setup.py
(+41 files in other folders)
