<?xml version="1.0"?>
<package format="2">
  <name>bringup</name>
  <version>0.0.0</version>
  <description>Top-level package to launch all required nodes in different environments (sim or real)</description>
  <maintainer email="mcgill.humanoid@gmail.com">McGill Humanoid</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>rosserial_arduino</build_depend>
  <build_depend>rosserial_client</build_depend>
  <exec_depend>rosserial_arduino</exec_depend>
  <exec_depend>rosserial_client</exec_depend>

  <build_depend>controls</build_depend>
  <build_depend>unity</build_depend>
  <build_depend>hardware</build_depend>

  <exec_depend>controls</exec_depend>
  <exec_depend>unity</exec_depend>
  <exec_depend>hardware</exec_depend>

</package>
