<?xml version="1.0"?>
<package format="2">
  <name>hardware</name>
  <version>0.1.0</version>
  <description>Package to interface with hardware on humanoid robot, namely the cameras, IMU, motors, and serial sensors.</description>
  <maintainer email="mcgill.humanoid@gmail.com">McGill Humanoid</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
