<?xml version="1.0"?>
<package format="2">
  <name>humanoid_msgs</name>
  <version>0.1.0</version>
  <description>Custom messages for Humanoid Project</description>
  <maintainer email="mcgill.humanoid@gmail.com">McGill Humanoid</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
