<?xml version="1.0"?>
<package format="2">
  <name>unity</name>
  <version>0.1.0</version>
  <description>Package to connect the ROS network to Unity-based simulations and visualizations.</description>
  <maintainer email="mcgill.humanoid@gmail.com">McGill Humanoid</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>humanoid_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rospy</depend>
  <depend>python3-numpy</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf</depend>
  <depend>sbg_driver</depend>

</package>
